--- a/src/styles/pages/home/home.scss
+++ b/src/styles/pages/home/home.scss
@@ -281,15 +281,16 @@ a:hover {
 
 // 粉色推荐栏
   .recom2{
-		 height: 278px;
+		 height: 260px;
 		 background-color: #fff;
 		 padding-top: 52px;
+		 margin-bottom: 50px;
 		 //position: relative;
 	}
 	 #pink-recom2{
 	// 	position: relative;
 		overflow: hidden;
-	 	height: 278px;
+	 	height: 260px;
  }
 	#pink-recom2 .swiper-slide img{
 		border-radius: 10px;
@@ -300,3 +301,95 @@ a:hover {
 		width: 370px;
 		height: 250px;
 	}
+
+	// 商品分类展示
+	.index-section .section-two {
+    position: relative;
+    float: left;
+    width: 570px;
+    height: 360px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    background: #ffffff;
+    border-radius: 10px;
+    overflow: hidden;
+}
+	.section-top{
+		height: 120px;
+    line-height: 120px;
+    overflow: hidden;
+	}
+	.section-top .section-title{
+		font-size: 32px;
+    color: #333333;
+    margin-right: 28px;
+	}
+	.index-section .section-top > .fr {
+    font-size: 14px;
+    color: #999999;
+    line-height: 134px;
+}
+.list-comm {
+	margin-right: -10px;
+}
+.list-comm > .item {
+	position: relative;
+	//clear : both;
+	float: left;
+	width: 280px;
+	height: 360px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	background: #ffffff;
+	border-radius: 10px;
+	overflow: hidden;
+}
+.index-section {
+	margin-bottom: 68px;
+}
+.good-img-wrap img{
+	width: 220px;
+	height: 220px;
+margin-left: 22px;
+}
+.good-img-wrap img:hover{
+	width: 250px;
+	height: 250px;
+margin-left: 10px;
+}
+.item a .good-name{
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 258px;
+	height: 40px;
+	font-size: 16px;
+	text-align: center;
+	color: #333333;
+	line-height: 1.3;
+	overflow: hidden;
+}
+.list-comm > .item .good-name .content {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	padding: 0 14px;
+}
+.list-comm > .item .good-price {
+	margin-top: 64px;
+	font-size: 16px;
+	text-align: center;
+}
+.list-comm > .item .good-price span {
+	margin: 17px -20px 0 45px;
+}
+.list-comm > .item .original-price {
+	text-decoration: line-through;
+	color: #999999;
+}
+.list-comm > .item .good-price {
+	margin-top: 64px;
+	font-size: 16px;
+	text-align: center;
+}
