--- a/src/styles/pages/home/home.scss
+++ b/src/styles/pages/home/home.scss
@@ -329,7 +329,7 @@ a:hover {
     color: #999999;
     line-height: 134px;
 }
-.list-comm {
+.section-content {
 	margin-right: -10px;
 }
 .list-comm > .item {
@@ -377,7 +377,7 @@ margin-left: 10px;
 	padding: 0 14px;
 }
 .list-comm > .item .good-price {
-	margin-top: 64px;
+	margin-top: 84px;
 	font-size: 16px;
 	text-align: center;
 }
@@ -387,9 +387,4 @@ margin-left: 10px;
 .list-comm > .item .original-price {
 	text-decoration: line-through;
 	color: #999999;
-}
-.list-comm > .item .good-price {
-	margin-top: 64px;
-	font-size: 16px;
-	text-align: center;
 }
