--- a/src/styles/pages/detail/detail.scss
+++ b/src/styles/pages/detail/detail.scss
@@ -1,1 +1,44 @@
 @import "../header";
+.goods-basic{
+    height: 1000px;
+    background-color: pink;
+    position: relative;
+}
+.goods-magnifier{
+    width: 500px;
+    height: 700px;
+    background-color: yellow;
+}
+
+#smallImg{
+    position: absolute;
+     background:url(../../../static/Images/bigImg.jpg_750x600.jpg) no-repeat;
+     //写背景图片 上面才能再加放大镜
+     background-size: cover; 
+       top: 250px;
+      left:100px; 
+      width:300px; 
+      height:300px;
+}
+#smallCursor{
+    position: absolute;
+     left: 0; top: 0; 
+     //display:none;
+      width: 140px; 
+      height: 140px; 
+      background: rgba(175,175,175,0.3);    
+}
+#bigCursor{
+    position: absolute; 
+    height:450px;
+     width:450px; 
+     left: 550px; 
+     top: 160px; 
+    // background: rgba(200,198,255,0.1); 
+     overflow: hidden;
+     background-color: #fff;
+     border: 1px solid #999;
+}
+#bigImg{
+    position: absolute; left: 0px; top: 0px;
+}
