--- a/src/styles/pages/detail/detail.scss
+++ b/src/styles/pages/detail/detail.scss
@@ -1,21 +1,24 @@
 @import "../header";
+
+// 放大镜
 .goods-basic{
-    height: 1000px;
-    background-color: pink;
+    height: 580px;
+    background-color: #fff;
     position: relative;
+    margin-top: 130px;
 }
 .goods-magnifier{
     width: 500px;
-    height: 700px;
-    background-color: yellow;
+    height: 680px;
+    //background-color: yellow;
 }
 
 #smallImg{
     position: absolute;
-     background:url(../../../static/Images/bigImg.jpg_750x600.jpg) no-repeat;
+     background:url(../../../static/Images/bigImg.jpg_750x600.jpg);
      //写背景图片 上面才能再加放大镜
      background-size: cover; 
-       top: 250px;
+       top: 100px;
       left:100px; 
       width:300px; 
       height:300px;
@@ -23,22 +26,81 @@
 #smallCursor{
     position: absolute;
      left: 0; top: 0; 
-     //display:none;
+    display: none;
       width: 140px; 
       height: 140px; 
       background: rgba(175,175,175,0.3);    
 }
 #bigCursor{
     position: absolute; 
-    height:450px;
-     width:450px; 
+    height:500px;
+     width:500px; 
      left: 550px; 
-     top: 160px; 
-    // background: rgba(200,198,255,0.1); 
+     top: 20px; 
      overflow: hidden;
      background-color: #fff;
      border: 1px solid #999;
+     display:none;
 }
 #bigImg{
     position: absolute; left: 0px; top: 0px;
 }
+
+// 商品信息
+.goods-msg{
+    width: 620px;
+    height: 556px;
+    background-color: #fff;
+     color: #999999; 
+     padding: 24px 0 0 20px;
+}
+.goods-msg .goods-title {
+    font-size: 22px;
+    font-weight: normal;
+    color: #333333;
+    line-height: 1.3;
+}
+.goods-msg .detail {
+    padding: 24px 0;
+    font-size: 16px;
+    color: #ff7878;
+    font-weight: bold;
+}
+// .goods-msg .tag {
+//     line-height: 1.2;
+//     margin-bottom: -10px;
+// }
+.goods-msg .tag .tag-name {
+    color: #ffffff;
+    padding: 1px 6px 0 4px;
+    background: #ff7878;
+    font-size: 14px;
+    line-height: 1.5;
+}
+.goods-msg p.hr {
+    margin: 20px 0 6px;
+    height: 0;
+    width: 100%;
+    overflow: hidden;
+    border-bottom: 1px solid #eeeeee;
+}
+.goods-msg .choose-attrs {
+    line-height: 46px;
+    height: 46px;
+}
+.goods-msg .choose-attrs > .dt {
+    float: left;
+    width: 90px;
+    font-size: 16px;
+}
+.goods-msg .choose-attrs > .price {
+    float: left;
+    width: 438px; 
+    text-decoration: line-through;
+}
+.goods-msg .discount-price{
+    float: left;
+    color: #ff7878;
+    font-size: 22px;
+}
+
