公共底部完成

--- a/src/styles/pages/home/home.scss
+++ b/src/styles/pages/home/home.scss
@@ -1,5 +1,5 @@
 @import "../header";
-
+@import "../footer";
 // 轮播图
 #ad-banner{
   	height: 400px;
@@ -302,8 +302,7 @@ margin-left: 10px;
 	margin:0 auto;
 }
 .footer{
-	height: 850px;
-	background-color: #333333;
+	height: 460px;
 }
 #floor .iconfont{
 	font-family:"iconfont";
