--- a/src/styles/pages/base.scss
+++ b/src/styles/pages/base.scss
@@ -51,3 +51,7 @@ html,body,input,button{
       margin-left: 193px;
       width: 1150px;
   }
+  button, input, textarea, area {
+    border: none;
+    outline: none;
+}
