--- a/src/styles/pages/register/register.scss
+++ b/src/styles/pages/register/register.scss
@@ -1,2 +1,11 @@
 @import "../bgc";
 @import "../footer";
+.red {
+    color: #ff7878;
+}
+.green {
+    color: #00937f;
+}
+.haveAccount a{
+    display: block;
+}
