购物车页面写好样式 下一步做模板

--- a/src/styles/pages/base.scss
+++ b/src/styles/pages/base.scss
@@ -55,3 +55,13 @@ html,body,input,button{
     border: none;
     outline: none;
 }
+tr {
+  display: table-row;
+  vertical-align: inherit;
+  border-color: inherit;
+}
+td, th {
+  word-wrap: break-word;
+  word-break: break-all;
+  overflow: hidden;
+}
