--- a/src/styles/pages/header.scss
+++ b/src/styles/pages/header.scss
@@ -72,4 +72,39 @@
 	outline: none;
 	border-width: 0;
 }
-
+.top-cart {
+	position: relative;
+	display: block;
+}
+.comm-header .search-bar .iconcart {
+    width: 23px;
+    height: 23px;
+    margin-top: 3px;
+    color: #999999;
+    font-size: 24px;
+    /* background: url(../img/btn.png) -20px 0px no-repeat; */
+    cursor: pointer;
+}
+.iconfont {
+    font-family: "iconfont" !important;
+    font-size: 28px !important;
+    font-weight: normal;
+    font-style: normal;
+}
+.cat-num {
+    display: block;
+    position: absolute;
+    right: -8px;
+    top: -2px;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
+    background: #ff7878;
+    border-radius: 50%;
+    color: #fff;
+    font-size: 12px;
+}
+i {
+    font-style: normal;
+}
